# mega_project

./: README.md
bringup/: package.xml  setup.py
bringup/config/: params.yaml
bringup/launch/: bringup.launch.py
megaProsjektCameraPkg/: package.xml  setup.py
megaProsjektCameraPkg/launch/: launch.py
megaProsjektCameraPkg/megaProsjektCameraPkg/: visionNode.py
moveit_wrapper/: CMakeLists.txt  package.xml
moveit_wrapper/launch/: wrapper.launch.py
moveit_wrapper/src/: moveit_wrapper_node.cpp
movement_controller/: package.xml  setup.cfg  setup.py
movement_controller/launch/: launch.py  movement_controller.launch.py
movement_controller/movement_controller/: movement_controller_node.py
vision/: launchStatement.txt  package.xml  setup.cfg  setup.py
vision/launch/: launch.py  vision.launch.py
vision/vision/: vision.py  vision_node.py
